feat: add speech-to-text via OpenAI

--- a/.env
+++ b/.env
@@ -28,3 +28,6 @@ MILVUS_TOKEN="root:"
 
 APP_EMBED_HOST=http://localhost
 EMBED_PORT=5000
+
+# Model used for OpenAI speech-to-text (Whisper)
+OPENAI_STT_MODEL=whisper-1
