Integrate OpenAI embedding service

--- a/.env
+++ b/.env
@@ -20,6 +20,9 @@ APP_SECRET=c79f2b33be8ec7022714dd82f2174373
 ###< symfony/framework-bundle ###
 
 OPENAI_API_KEY=YOUR_OPENAI_API_KEY_HERE
+OPENAI_MODEL=text-embedding-3-small
+OPENAI_MODEL_IMAGE=gpt-4o
+DEBUG_VECTORS=false
 
 MILVUS_HOST=http://milvus
 MILVUS_PORT=19530
