--- a/.env.dist
+++ b/.env.dist
@@ -20,6 +20,9 @@ APP_SECRET=YOUR_APP_SECRET
 ###< symfony/framework-bundle ###
 
 OPENAI_API_KEY=YOUR_OPENAI_API_KEY_PLACEHOLDER
+OPENAI_MODEL=text-embedding-3-small
+OPENAI_MODEL_IMAGE=gpt-4o
+DEBUG_VECTORS=false
 
 MILVUS_HOST=http://milvus
 MILVUS_PORT=19530
