Downgrade Symfony and integrate Zilliz

--- a/.env.dist
+++ b/.env.dist
@@ -24,11 +24,10 @@ OPENAI_MODEL=text-embedding-ada-002
 OPENAI_MODEL_IMAGE=gpt-4o
 DEBUG_VECTORS=false
 
-MILVUS_HOST=http://milvus
-MILVUS_PORT=19530
+MILVUS_HOST=https://zilliz
+MILVUS_PORT=443
 MILVUS_COLLECTION=default
-
-MILVUS_TOKEN=""
+MILVUS_API_KEY=key
 
 # Model used for OpenAI speech-to-text (Whisper)
 OPENAI_STT_MODEL=whisper-1
