--- a/composer.json
+++ b/composer.json
@@ -4,26 +4,25 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.2",
+        "php": "^7.4 || ^8.0 || ^8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-simplexml": "*",
-        "helgesverre/milvus": "^0.1.0",
-        "openai-php/client": "^0.13.0",
-        "symfony/console": "6.4.*",
-        "symfony/dotenv": "6.4.*",
+        "openai-php/client": "^0.12.0",
+        "symfony/console": "5.4.*",
+        "symfony/dotenv": "5.4.*",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "6.4.*",
-        "symfony/http-client": "6.4.*",
-        "symfony/mime": "6.4.*",
+        "symfony/framework-bundle": "5.4.*",
+        "symfony/http-client": "5.4.*",
+        "symfony/mime": "5.4.*",
         "symfony/monolog-bundle": "^3.10",
-        "symfony/property-access": "6.4.*",
-        "symfony/runtime": "6.4.*",
-        "symfony/serializer": "6.4.*",
-        "symfony/translation": "6.4.*",
-        "symfony/twig-bundle": "6.4.*",
-        "symfony/validator": "6.4.*",
-        "symfony/yaml": "6.4.*"
+        "symfony/property-access": "5.4.*",
+        "symfony/runtime": "5.4.*",
+        "symfony/serializer": "5.4.*",
+        "symfony/translation": "5.4.*",
+        "symfony/twig-bundle": "5.4.*",
+        "symfony/validator": "5.4.*",
+        "symfony/yaml": "5.4.*"
     },
     "config": {
         "allow-plugins": {
@@ -70,7 +69,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.4.*"
+            "require": "5.4.*"
         }
     },
     "require-dev": {
