feat: add global API key enforcement

--- a/.env.dist
+++ b/.env.dist
@@ -19,6 +19,9 @@ APP_ENV=dev
 APP_SECRET=YOUR_APP_SECRET
 ###< symfony/framework-bundle ###
 
+# API key required for all endpoints
+APP_API_KEY=changeme
+
 OPENAI_API_KEY=YOUR_OPENAI_API_KEY_PLACEHOLDER
 OPENAI_MODEL=text-embedding-ada-002
 OPENAI_MODEL_IMAGE=gpt-4o
