--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.api_key: '%env(APP_API_KEY)%'
 
 services:
     # default configuration for services in *this* file
@@ -21,6 +22,10 @@ services:
             - '../src/Kernel.php'
 
     App\Factory\MilvusClientFactory: ~
+
+    App\EventSubscriber\ApiKeySubscriber:
+        arguments:
+            $apiKey: '%app.api_key%'
 
     Milvus\Client:
         factory: ['@App\Factory\MilvusClientFactory', 'create']
