--- a/.env
+++ b/.env
@@ -19,6 +19,8 @@ APP_ENV=dev
 APP_SECRET=c79f2b33be8ec7022714dd82f2174373
 ###< symfony/framework-bundle ###
 
+APP_API_KEY=changeme
+
 OPENAI_API_KEY=YOUR_OPENAI_API_KEY_PLACEHOLDER
 
 OPENAI_CHAT_MODEL=gpt-3.5-turbo
