feat: add search history support

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -95,3 +95,5 @@ services:
     App\Command\ProcessAudioCommand:
         arguments:
             $sttService: '@App\Service\OpenAISpeechToTextService'
+
+    App\Service\SearchHistoryService: ~
